[gd_scene format=3 uid="uid://drnojpvlhjsoh"]

[ext_resource type="Script" uid="uid://oyewf5g7rhlo" path="res://scripts/menu_contextual.gd" id="1_vwifb"]

[node name="MenuContextual" type="PanelContainer" unique_id=119363778]
modulate = Color(0.7694515, 0.58945984, 0.4248623, 1)
self_modulate = Color(1, 0.7882353, 0, 1)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vwifb")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1462848825]
layout_mode = 2

[node name="BtnEquipar" type="Button" parent="VBoxContainer" unique_id=734449364]
layout_mode = 2
text = "Equipar"

[node name="BtnUsar" type="Button" parent="VBoxContainer" unique_id=1020440429]
layout_mode = 2
text = "Usar"

[node name="BtnMover" type="Button" parent="VBoxContainer" unique_id=1574550266]
layout_mode = 2
text = "Mover"

[node name="BtnDesequipar" type="Button" parent="VBoxContainer" unique_id=727042004]
layout_mode = 2
text = "Desequipar"
